[package]
name = "rss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
dirs = "5.0.1"
feed-rs = "1.5.1"
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }
reqwest = { version = "0.12.4", features = ["gzip"] }
rusqlite = "0.31.0"
tokio = { version = "1.37.0", features = ["full"] }
